@@ -33,13 +33,44 @@ def u():
     return mda.Universe(RNA_PSF, RNA_PDB)
 
 
-def test_wc_dist(u):
+@pytest.fixture(scope='module')
+def wc_rna(u):
     strand: mda.AtomGroup = u.select_atoms("segid RNAA")
     strand1 = [strand.residues[0], strand.residues[21]]
     strand2 = [strand.residues[1], strand.residues[22]]
 
     WC = WatsonCrickDist(strand1, strand2)
     WC.run()
+    return WC
 
-    assert_allclose(WC.results[0][0], 4.3874702, atol=1e-3)
-    assert_allclose(WC.results[1][0], 4.1716404, atol=1e-3)
+
+def test_wc_dist(wc_rna):
+    assert_allclose(wc_rna.results.pair_distances[0, 0], 4.3874702, atol=1e-3)
+    assert_allclose(wc_rna.results.pair_distances[0, 1], 4.1716404, atol=1e-3)
+
+
+def test_wc_dist_sel_indices_deprecated(wc_rna):
+    wmsg = ("Accessing results via selection indices is "
+            "deprecated and will be removed in MDAnalysis 2.5.0")
+
+    with pytest.deprecated_call(match=wmsg):
+        for i in range(wc_rna._n_sel):
+            assert_allclose(
+                    wc_rna.results.pair_distances[:, i],
+                    wc_rna.results[i][0]
+            )
+
+
+def test_wc_dist_times_deprecated(wc_rna):
+    wmsg = ("The `times` results attribute is deprecated and will "
+            "be removed in MDAnalysis 2.5.0.")
+
+    with pytest.deprecated_call(match=wmsg):
+        assert_allclose(wc_rna.times, wc_rna.results.times)
+
+
+@pytest.mark.parametrize('key', [2, 'parsnips', 'time', -1])
+def test_wc_dis_results_keyerrs(wc_rna, key):
+
+    with pytest.raises(KeyError, match=f"{key}"):
+        wc_rna.results[key]
